--- a/wl_ios/podfile
+++ b/wl_ios/podfile
@@ -9,7 +9,7 @@ target 'Wangli' do
     pod 'Masonry', '~> 1.0.2'
     pod 'MJRefresh', '~> 3.1.15.1'
     pod 'JSONModel', '~> 1.7.0'
-    pod 'BFKit', '~> 1.5.3'
+#    pod 'BFKit', '~> 1.5.3'
     pod 'SVProgressHUD', '~> 2.2.5'
     pod 'SAMKeychain'
     pod 'TZImagePickerController', '~> 1.7.9'
@@ -24,7 +24,7 @@ target 'Wangli' do
     pod 'MMLayout', '~> 0.2.0'
     pod 'SDWebImage', '~> 5.5.2'
     pod 'Toast', '~> 4.0.0'
-    pod 'AFNetworking', '~> 3.1.0', :subspecs => ['Reachability', 'Serialization', 'Security', 'NSURLSession']
+    pod 'AFNetworking', '~> 3.2.1', :subspecs => ['Reachability', 'Serialization', 'Security', 'NSURLSession']
 
     pod 'ReactiveObjC', '~> 3.1.1' #ok
     pod 'TXIMSDK_iOS', '~> 4.9.1'
